--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pin-project-lite= "0.2.16"
 
 tokio = { version = "1.40.0", features = ["full"] }
+
+# the rust programming language (为编写教程封装的)
+trpl = "0.2.0"
